# health-buddy

./: LICENSE  fruit_buddy.py  indian_fruits_nutrition_100.csv  pyproject.toml
