[tool.poetry]
name = "healthbuddy"
version = "0.1.0"
description = "Nutrition buddy"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
pandas = "^2.2.3"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
